--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cordova-custom-config": "5.0.2",
     "cordova-plugin-splashscreen": "5.0.1",
     "cordova-plugin-whitelist": "1.3.3",
+    "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
     "monaca-plugin-monaca-core": "3.2.1",
     "vue": "^2.5.16",
