--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0+20180918.1",
   "description": "",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.4.1",
     "cordova-custom-config": "5.0.2",
     "cordova-plugin-splashscreen": "5.0.1",
     "cordova-plugin-whitelist": "1.3.3",
