Add comment and rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onsenui-v2-vue-minimum",
+  "name": "sample-customer-management",
   "version": "3.0.0+20180918.1",
   "description": "",
   "dependencies": {
