--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0+20180918.1",
   "description": "",
   "dependencies": {
+    "@mapbox/mapbox-gl-language": "^0.10.0",
     "@mapbox/mapbox-sdk": "^0.4.1",
     "cordova-custom-config": "5.0.2",
     "cordova-plugin-splashscreen": "5.0.1",
@@ -42,6 +43,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
